Fix cloud movement on mobile

--- a/src/components/styles/content.scss
+++ b/src/components/styles/content.scss
@@ -147,7 +147,7 @@
 
 .peep {
   width: 100%;
-  margin: 20px;
+  margin: 20px 0px 20px 0px;
   text-align: center;
 }
 
